k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: ai-task-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      securityContext:
        [cite_start]runAsNonRoot: true # Security [cite: 28]
        runAsUser: 1000
      containers:
      - name: backend
        [cite_start]image: rageenawahab/ai-backend:latest # CI/CD updates this tag [cite: 48]
        ports:
        - containerPort: 5000
        livenessProbe:
          [cite_start]httpGet: {path: /health, port: 5000} # Health probe [cite: 36]
        readinessProbe:
          httpGet: {path: /health, port: 5000}
        [cite_start]resources: # Resource limits [cite: 35]
          limits: {cpu: "500m", memory: "512Mi"}
          requests: {cpu: "250m", memory: "256Mi"}
