k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-worker
  namespace: ai-task-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ai-worker
  template:
    metadata:
      labels:
        app: ai-worker
    spec:
      containers:
      - env:
        - name: REDIS_HOST
          value: redis.ai-task-platform.svc.cluster.local
        - name: MONGO_URI
          value: mongodb://mongo-service:27017/ai_tasks
        image: rageenawahab/ai-worker:v1
        
        # 2. Fix the Mongo connection string to match your 'mongo-service' name
        - name: MONGO_URI
          value: "mongodb://mongo-service:27017/ai_tasks"
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
