k8s/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: ai-task-platform
spec:
  selector:
    app: mongo # Make sure this matches the labels in your mongo-deployment.yaml
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
